--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">FBU_App</string>
     <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_dashboard">Compose</string>
+    <string name="title_notifications">Profile</string>
     <string name="facebook_app_id">1034944743575211</string>
     <string name="large_text">
         "Material is the metaphor.\n\n"
