--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">FBU_App</string>
+    <string name="app_name">Escapade</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Compose</string>
     <string name="title_notifications">More</string>
